# GenAi_G4_generation

./: .gitignore  CMakeLists.txt  bash_run.sh  calogan.mac  datasets.env  exo0.mac  exo1.mac  generation.cc  slurm_bash.sh  slurm_bash_with_plots.sh
helpers_py/: concatenate_root_files.py  coordinates_list_from_outtxt.py  open_rootfile.py  plot_1D_features_ROOT_x_z.py  plot_1D_features_X_to_Z.py  read_hdf5.py  root_convert_hdf5.py  run.py
include/: DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
visTutor/: generationTree0.mac  generationVis0.mac  generationVis14.mac  heprep.mac
